--- a/frontend/src/base.css
+++ b/frontend/src/base.css
@@ -1,6 +1,7 @@
 /* Layout */
 .main-container{
     padding: 1rem 1.5rem;
+    width: 100%;
 }
 
 /* Font Weights */
@@ -42,6 +43,10 @@
 }
 
 /* Font Colors */
-.purple-text{
-    color: #5B1088;
+.gold-text{
+    color: #ff9900;
+}
+
+.white-text{
+    color: #FFFFFF;
 }
